--- a/pom.xml
+++ b/pom.xml
@@ -259,6 +259,11 @@
 			<artifactId>jsch</artifactId>
 			<version>0.1.53</version>
 		</dependency>
+       	<dependency>
+       		<groupId>net.lingala.zip4j</groupId>
+       		<artifactId>zip4j</artifactId>
+       		<version>1.3.2</version>
+       	</dependency>
 	</dependencies>
 	<build>  
     <plugins>  
