--- a/src/main/resources/program.properties
+++ b/src/main/resources/program.properties
@@ -7,3 +7,4 @@ jdbc.password=123456
 hostIpAddress=http://127.0.0.1:80/
 savePathCustomJsp=D:\server\apache-tomcat-8.0.44\webapps
 #savePathCustomJsp=D:/Z1/apache/apache-tomcat-8.5.6/webapps/
+new_brandPic_Path=D:/newBrandPic/
