--- a/src/main/resources/program.properties
+++ b/src/main/resources/program.properties
@@ -2,10 +2,10 @@ jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://127.0.0.1:3306/sjkj?useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
 jdbc.username=root
 #jdbc.password=root
-jdbc.password=123456
+jdbc.password=root
 
 hostIpAddress=http://127.0.0.1:80/
-savePathCustomJsp=D:\server\apache-tomcat-8.0.44\webapps
+savePathCustomJsp=D\:serverapache-tomcat-8.0.44webapps
 #savePathCustomJsp=D:/Z1/apache/apache-tomcat-8.5.6/webapps/
 temp_brandPic_path = /brandPics/
 note_pics_path = http://localhost/nodePics/
