--- a/src/main/resources/program.properties
+++ b/src/main/resources/program.properties
@@ -2,7 +2,7 @@ jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://127.0.0.1:3306/sjkj?useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
 jdbc.username=root
 #jdbc.password=root
-jdbc.password=root
+jdbc.password=123456
 
 hostIpAddress=http://127.0.0.1:80/
 savePathCustomJsp=D\:serverapache-tomcat-8.0.44webapps
