--- a/src/main/resources/program.properties
+++ b/src/main/resources/program.properties
@@ -1,13 +1,16 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/sjkj?useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
-jdbc.username=root
+#jdbc.url=jdbc:mysql://127.0.0.1:3306/sjkj?useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
+#jdbc.username=root
 #jdbc.password=root
-jdbc.password=root
+
+jdbc.url=jdbc:mysql://47.95.208.48:3306/sjkj?useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
+jdbc.username=root
+jdbc.password=sjkj@123.love
 
 hostIpAddress=http://127.0.0.1:80/
 savePathCustomJsp=D\:serverapache-tomcat-8.0.44webapps
 #savePathCustomJsp=D:/Z1/apache/apache-tomcat-8.5.6/webapps/
 temp_brandPic_path = /brandPics/
-note_pics_path = http://localhost/nodePics/
+note_pics_path = /nodePics/
 note_pics_path_no_ip = /nodePics/
-note_adv_pics_path = http://127.0.0.1:80/SJKJ/static/images/Pre/content/news1.jpg
+note_adv_pics_path = /SJKJ/static/images/Pre/content/news1.jpg
