--- a/src/main/resources/program.properties
+++ b/src/main/resources/program.properties
@@ -14,3 +14,5 @@ temp_brandPic_path = /brandPics/
 note_pics_path = /nodePics/
 note_pics_path_no_ip = /nodePics/
 note_adv_pics_path = /SJKJ/static/images/Pre/content/news1.jpg
+
+book_save_path = /books/
