--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -13,7 +13,7 @@ log4j.appender.CONSOLE.layout.ConversionPattern=<%d{yyyy-MM-dd HH\:mm\:ss\:SSS} 
 log4j.appender.PRODUCT=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.PRODUCT.Append=true
 log4j.appender.PRODUCT.DatePattern='.' yyyy-MM-dd
-log4j.appender.PRODUCT.File=d\:sjkj_info.log
+log4j.appender.PRODUCT.File=/logs/sjkj_info.log
 log4j.appender.PRODUCT.Threshold=INFO
 log4j.appender.PRODUCT.Encoding=UTF-8
 #log4j.appender.PRODUCT.MaxFileSize=20MB
@@ -24,7 +24,7 @@ log4j.appender.PRODUCT.layout.ConversionPattern=<%d{yyyy-MM-dd HH\:mm\:ss\:SSS} 
 log4j.appender.PRODUCT-ERROR=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.PRODUCT-ERROR.Append=true
 log4j.appender.PRODUCT-ERROR.DatePattern='.' yyyy-MM-dd
-log4j.appender.PRODUCT-ERROR.File=d\:sjkj_error.log
+log4j.appender.PRODUCT-ERROR.File=/logs/sjkj_error.log
 log4j.appender.PRODUCT-ERROR.Threshold=ERROR
 log4j.appender.PRODUCT-ERROR.Encoding=UTF-8
 log4j.appender.PRODUCT-ERROR.layout=org.apache.log4j.PatternLayout
