--- a/src/main/resources/program.properties
+++ b/src/main/resources/program.properties
@@ -7,7 +7,7 @@ jdbc.url=jdbc:mysql://47.95.208.48:3306/sjkj?useUnicode=true&characterEncoding=u
 jdbc.username=root
 jdbc.password=sjkj@123.love
 
-hostIpAddress=http://127.0.0.1:80/
+hostIpAddress=http://localhost:80
 savePathCustomJsp=D\:serverapache-tomcat-8.0.44webapps
 #savePathCustomJsp=D:/Z1/apache/apache-tomcat-8.5.6/webapps/
 temp_brandPic_path = /brandPics/
@@ -16,4 +16,5 @@ note_pics_path_no_ip = /nodePics/
 note_adv_pics_path = /SJKJ/static/images/Pre/content/news1.jpg
 
 #book_save_path = D:/Z1/apache/apache-tomcat-8.5.6/webapps/
-book_save_path = D:/server/apache-tomcat-8.0.44/webapps/
+#book_save_path = D:/server/apache-tomcat-8.0.44/webapps/
+book_save_path = /usr/local/tomcat/webapps
