--- a/src/main/resources/program.properties
+++ b/src/main/resources/program.properties
@@ -7,7 +7,7 @@ jdbc.url=jdbc:mysql://47.95.208.48:3306/sjkj?useUnicode=true&characterEncoding=u
 jdbc.username=root
 jdbc.password=sjkj@123.love
 
-hostIpAddress=http://localhost:80
+hostIpAddress=http://47.95.208.48:8088
 savePathCustomJsp=D\:serverapache-tomcat-8.0.44webapps
 #savePathCustomJsp=D:/Z1/apache/apache-tomcat-8.5.6/webapps/
 temp_brandPic_path = /brandPics/
