--- a/src/main/resources/program.properties
+++ b/src/main/resources/program.properties
@@ -17,4 +17,4 @@ note_adv_pics_path = /SJKJ/static/images/Pre/content/news1.jpg
 
 #book_save_path = D:/Z1/apache/apache-tomcat-8.5.6/webapps/
 #book_save_path = D:/server/apache-tomcat-8.0.44/webapps/
-book_save_path = /usr/local/tomcat/webapps
+book_save_path = /usr/local/jqxx/
