--- a/src/main/resources/program.properties
+++ b/src/main/resources/program.properties
@@ -10,7 +10,7 @@ jdbc.password=sjkj@123.love
 hostIpAddress=http://47.95.208.48:8088
 savePathCustomJsp=D\:serverapache-tomcat-8.0.44webapps
 #savePathCustomJsp=D:/Z1/apache/apache-tomcat-8.5.6/webapps/
-temp_brandPic_path = /brandPics/
+temp_brandPic_path = /usr/local/jqxx/brandPics/
 note_pics_path = /nodePics/
 note_pics_path_no_ip = /nodePics/
 note_adv_pics_path = /SJKJ/static/images/Pre/content/news1.jpg
